update weather and change city

--- a/app/src/main/res/layout/forecast_item.xml
+++ b/app/src/main/res/layout/forecast_item.xml
@@ -37,4 +37,12 @@
         android:layout_weight="1"
         android:textColor="#fff"/>
 
+    <TextView
+        android:id="@+id/wind_text"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:layout_weight="1"
+        android:textColor="#fff"/>
+
 </LinearLayout>
